--- a/login.html
+++ b/login.html
@@ -12,10 +12,10 @@
   </header>
 
   <div class="login-container">
-    <form action="dashboard.html" method="get" class="login-form" id="login-form">
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required>
-      <div id="username-error" style="color: red; font-size: 0.9em; min-height: 20px;"></div>
+    <form action="select-crop.html" method="get" class="login-form" id="login-form" onsubmit="return validateForm()">
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+      <div id="email-error" style="color: red; font-size: 0.9em; min-height: 20px;"></div>
 
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
@@ -25,5 +25,45 @@
     </form>
   </div>
 
+  <script>
+    // Simple client-side login validation
+    function validateForm() {
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+      const emailError = document.getElementById('email-error');
+      const passwordError = document.getElementById('password-error');
+      let isValid = true;
+
+      // Email validation
+      const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+      if (!emailPattern.test(email)) {
+        emailError.textContent = 'Please enter a valid email address (e.g., user@example.com)';
+        isValid = false;
+      } else {
+        emailError.textContent = '';
+      }
+
+      // Password validation
+      const passwordPattern = /^(?=.*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{8,}$/;
+      if (!passwordPattern.test(password)) {
+        passwordError.textContent = 'Password must be at least 8 characters and include one special character';
+        isValid = false;
+      } else {
+        passwordError.textContent = '';
+      }
+
+    //   // Set login status in session
+    //   if (isValid) {
+    //     sessionStorage.setItem('isLoggedIn', 'true');
+    //   }
+
+    //   return isValid;
+    // }
+
+    // // Redirect if already logged in
+    // if (sessionStorage.getItem('isLoggedIn') === 'true') {
+    //   window.location.href = 'select-crop.html';
+    // }
+  </script>
 </body>
 </html>
