--- a/select-crop.html
+++ b/select-crop.html
@@ -8,14 +8,14 @@
 <body>
 
   <header>
-    <h1>Farmer Crop Selection</h1>
+    <h1 class="index_h1">Farmer Crop Selection</h1>
     <p>Choose your state, season, and crop to get started</p>
   </header>
 
   <nav>
     <a href="index.html">Home</a>
     <a href="dashboard.html">Dashboard</a>
-    <a href="govt-info.html">Govt Inputs</a>
+    <a href="knowledgebase.html">Knowledgebase</a>
   </nav>
 
   <main>
