--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
   <nav class="main-nav">
     <a href="index.html">Home</a>
-    <a href="knowledgebase.html">Knowledgebase</a>
+    <a href="knowledge_index.html">Knowledgebase</a>
     <a href="login.html" class="button">Login</a>
   </nav>
 
@@ -29,7 +29,7 @@
       <div class="service-card">
         <h3>Crop Timelines</h3>
         <p>Get detailed weekly action plans for each crop, from sowing to harvest.</p>
-        <a href="dashboard.html" class="card-link">View Timeline</a>
+        <a href="login.html" class="card-link">View Timeline</a>
       </div>
 
       <div class="service-card">
@@ -47,7 +47,7 @@
       <div class="service-card">
         <h3>Personal Dashboard</h3>
         <p>Track crop progress, mark tasks as done, and manage your farming plan.</p>
-        <a href="dashboard.html" class="card-link">Go to Dashboard</a>
+        <a href="login.html" class="card-link">Go to Dashboard</a>
       </div>
     </div>
   </main>
@@ -55,5 +55,6 @@
   <footer>
     <p>&copy; 2025 <strong>FarmAssist</strong>. Empowering Farmers Across India.</p>
   </footer>
+  
 </body>
 </html>
